# quadruped-reactive-walking

./: .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  compare_logs.py  environment.yaml  environment.yml  git-deps.yaml  main.py  package.xml  pyproject.toml  replay_log.py  ros-environment.yaml  ros-git-deps.yaml  setup.cfg  test_client.py
.github/workflows/: ci.yml  macos-linux-conda.yml
.github/workflows/conda/: environment_macos_linux.yml
config/: config_solo12.yaml  jump_task.yaml  ocp.yaml  walk_parameters.yaml
examples/: bench_croc_ocp.py  run_jump_ocp.py  simple_ocp.py
include/bindings/: python.hpp  visitors.hpp
include/other/: st_to_cc.hpp
include/qrw/: Animator.hpp  ComplementaryFilter.hpp  Estimator.hpp  Filter.hpp  IMPCWrapper.hpp  IOCPAbstract.hpp  InvKin.hpp  Joystick.hpp  Keyboard.hpp  LowPassFilter.hpp  MPCResult.hpp  Params.hpp  ResidualFlyHigh.hpp  ResidualFlyHigh.hxx  Types.h  Types.hpp  utils.hpp  yaml-eigen.hpp
include/qrw/bindings/: custom-members.hpp  python.hpp  visitors.hpp  yaml-node.hpp
processing/: replay_log.py
python/: Animator.cpp  CMakeLists.txt  Estimator.cpp  Filter.cpp  Joystick.cpp  MPCResult.cpp  Params.cpp  expose-animator.cpp  expose-estimator.cpp  expose-filter.cpp  expose-keyboard.cpp  expose-mpc-interface.cpp  expose-mpc-result.cpp  expose-ocp-interface.cpp  expose-params.cpp  expose-residual-fly-high.cpp  gepadd.cpp  main.cpp  module.cpp
python/quadruped_reactive_walking/: Controller.py  WB_MPC_Wrapper.py  __init__.py  controller.py  main_solo12_control.py  wbmpc_wrapper.py  wbmpc_wrapper_abstract.py  wbmpc_wrapper_async.py  wbmpc_wrapper_multiprocess.py  wbmpc_wrapper_ros.py  wbmpc_wrapper_ros_mp.py  wbmpc_wrapper_sync.py
python/quadruped_reactive_walking/WB_MPC/: BenchmarkCrocoddylOCP.py  CrocoddylOCP.py  OcpResult.py  ProblemData.py  Target.py  __init__.py  ocp_abstract.py  ocp_crocoddyl.py  ocp_proxddp.py  problem_data.py
python/quadruped_reactive_walking/ocp_defs/: common.py  jump.py  walking.py
python/quadruped_reactive_walking/tools/: Interpolator.py  LoggerControl.py  LoggerControlSimple.py  PyBulletSimulator.py  Utils.py  interpolator.py  kinematics_utils.py  logger_control.py  meshcat_viewer.py  plotting.py  pybullet_sim.py  qualisysClient.py  qualisys_client.py  ros_tools.py  utils.py
python/quadruped_reactive_walking/wb_mpc/: __init__.py  jump.py  ocp_abstract.py  ocp_crocoddyl.py  ocp_proxddp.py  problem_data.py  target.py  task_spec.py  walking.py
ros_qrw_msgs/: MPCInit.srv  MPCSolve.srv  MPCStop.srv
scripts/: Controller.py  Joystick.py  LoggerControl.py  config_solo12.yaml  gamepadClient.py
scripts/crocoddyl_class/: MPC_crocoddyl.py  MPC_crocoddyl_planner.py
src/: Animator.cpp  ComplementaryFilter.cpp  Controller.cpp  Estimator.cpp  Filter.cpp  FootTrajectoryGenerator.cpp  FootstepPlanner.cpp  IOCPAbstract.cpp  InvKin.cpp  Joystick.cpp  Keyboard.cpp  LowPassFilter.cpp  Params.cpp  walk_parameters.yaml
tests/: CMakeLists.txt  residual-models.cpp  test-costs.cpp  test-residual-models.cpp  test_mpc_result.py
tests/ros/: test_ros_service.py
unittest/: test_sdl_kb.py
